feat: 1.拆分位号数据历史接口；2.调试和优化设备历史曲线