@@ -65,7 +65,7 @@ public class PageUtil {
         if (CollUtil.isEmpty(orders)) {
             orders = new ArrayList<>(2);
         }
-        orders = orders.stream().filter(order -> ObjectUtil.isNotNull(order) && CharSequenceUtil.isNotEmpty(order.getColumn())).collect(Collectors.toList());
+        orders = orders.stream().filter(order -> ObjectUtil.isNotNull(order) && CharSequenceUtil.isNotEmpty(order.getColumn())).toList();
         boolean match = orders.stream().anyMatch(order -> ObjectUtil.isNotNull(order) && "create_time".equals(order.getColumn()));
         if (!match) {
             orders.add(OrderItem.desc("create_time"));
